refactoring Range